syntax = "proto3";

option csharp_namespace = "cst_back.Protos";

package fileinfo;

service RPCFileInfo {
	rpc GetBaseInfo(stream GetInfoRequest) returns (GetBaseInfoResponse);
	rpc GetFinalInfo(stream GetInfoRequest) returns (GetFinalInfoResponse);

	rpc DeleteTmpFiles(DeleteTmpFilesRequest) returns (DeleteTmpFilesResponse);

	rpc DownloadSave(DownloadSaveRequest) returns (stream DownloadSaveResponse);
}

message DownloadSaveRequest {
	string InstanceID = 1;
}

message DownloadSaveResponse {
	bytes File = 1;
}

message DeleteTmpFilesRequest {
	string Username = 1;
}

message DeleteTmpFilesResponse {
	int32 NumberDeleted = 1;
}

message GetInfoRequest {
	string Id = 1;
	bytes File = 2;
}

message GetBaseInfoResponse {
	MapInfo MapInfo = 1;
}

message GetFinalInfoResponse {
	MapInfo MapInfo = 1;
	GameStats GameStats = 2;
}

message MapInfo {
	string Civilization = 1;
	int32 Turn = 2;
	string Map = 3;
	repeated string Mods = 4;
}

message GameStats  {
	float Science = 1;
	float Culture = 2;
	float Food = 3;
	float Production = 4;
	float Faith = 5;
	float Gold =  6;
}